машинка теперь строит маршрут между вершинами и едет по нему

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,14 +4,19 @@ project(CMakeSFMLProject LANGUAGES CXX)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 include(FetchContent)
-FetchContent_Declare(SFML
+FetchContent_Declare(
+    SFML
     GIT_REPOSITORY https://github.com/SFML/SFML.git
     GIT_TAG 3.0.0
     GIT_SHALLOW ON
     EXCLUDE_FROM_ALL
-    SYSTEM)
+    SYSTEM
+)
 
 FetchContent_MakeAvailable(SFML)
+
+FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download/v3.11.3/json.tar.xz)
+FetchContent_MakeAvailable(json)
 
 file(GLOB_RECURSE SOURCE_FILES src/*.cpp)
 add_executable(main ${SOURCE_FILES})
